--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME='TravelEase - Find Your Perfect Stay'
 APP_ENV=local
 APP_KEY=base64:SEjGcAu686ZZQORkIEodR2WdcPpqBBKjMxfIbEFoTrA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
