--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/pulse": "^1.4",
         "laravel/tinker": "^2.10",
         "laravel/ui": "^4.5",
+        "maatwebsite/excel": "^3.1",
         "nwidart/laravel-modules": "^12.0",
         "spatie/laravel-permission": "^6.4",
         "tormjens/eventy": "^0.8.0"
